# nanobot

./: .env.example  .gitignore  CLARIFICATION_FIX.md  DEBUG_FILE_DISPLAY.md  FILE_STORAGE_SUMMARY.md  FRONTEND_QA_FIX.md  IMAGE_DEBUG_GUIDE.md  INTENT_ANALYSIS_LOG_IMPROVEMENT.md  MIGRATION.md  PATTERN_MODE_FALLBACK_ANALYSIS.md  PATTERN_PARAM_DESIGN_ISSUES.md  PATTERN_TEMPLATE_ID_FIX.md  PATTERN_TUPLE_FIX.md  PROJECT_STRUCTURE.md  QA_TEMPLATE_IMPLEMENTATION_SUMMARY.md  QUICK_START_QA_TEMPLATES.md  README.md  README_CHATBI.md  SECURITY.md  SQL_GENERATION_ONLY.md  TEMPLATE_MODE_FIXES.md  TOKEN_FIX_SUMMARY.md  USAGE_EXAMPLES.md  analyse.md  config.json  config_backup.json  diagnose_file_display.js  diagnose_qa_system.sh  fix_sessions.py  main.py  memory解读.md  pyproject.toml  requirements-chatbi.txt  requirements-dev.txt  requirements.txt  start.sh  start_server.sh  test_file_display.html  test_image_url_flow.py  test_pattern_load.py  (+5 more)
chatbi/: FILE_STORAGE.md  FILE_STORAGE_EXAMPLE.md  FRONTEND_ENHANCEMENT.md  FRONTEND_TEST_GUIDE.md  MEMORY.md  QUICK_START.md  REFACTOR_SUMMARY.md  SANDBOX_REFACTOR.md  __init__.py  check_deps.py  config.py  main.py  start.sh  start_with_image_server.sh  stop_servers.sh  test_api.py  test_file_storage.py  test_logging.py  test_memory.py  test_memory_integration.py  test_pattern_mode.py  test_sandbox_files.py
config/: chatbi.json  pattern_config.json  scenes.json
frontend/: ModeIndicator.md  README.md  README_Layout.md  debug_dom.html  index.html  test_layout.html  (+1 more)
uesless/: MIGRATION.md  pyproject.toml  test_exa.py  test_web_search.py
(+189 files in other folders)
